@@ -2,6 +2,7 @@ language-puppet (1.4.1) UNRELEASED; urgency=medium
 
   * Add the `with` function.
   * Add the `assert_type` function.
+  * Change [Puppet 4] empty strings in boolean context are true (See #205)
 
  -- Simon Marechal <simon.marechal@edf.fr>  Thu, 13 Sep 2018 15:54:03 +0200
 
